--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
  <h1> > selector</h1>
 	<div id="grater">
-      <h2>My name is Donald</h2>
-      <p>I live in Duckburg.</p>
+      <h2>My name is Yeasin</h2>
+      <p>I live in Dhaka.</p>
     </div>
 
 
 
  <h1>element + element</h1>
   <div id="plus">
-     <h2>My name is Donald</h2>
-     <p>I live in Duckburg.</p>
+     <h2>My name is Yeasin</h2>
+     <p>I live in Dhaka</p>
   </div>
-     <p>My best friend is Mickey.</p>
+     <p>My best friend is #</p>
 seco
 
  <h1>element~element</h1>
